Fix scrollbars in android screen-sizes.

--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -62,6 +62,27 @@ main,
 }
 
 @media $small-min-width {
+
+    .view {
+        min-height: 100%;
+        height: auto;
+    }
+
+    main {
+        height: 100%;
+    }
+
+    .page {
+        height: auto;
+    }
+
+    main,
+    .page {
+        min-height: 100%;
+        overflow: visible;
+    }
+
+
     .inner {
         display: block;
         padding: 85px;
